--- a/html/demo.html
+++ b/html/demo.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo测试111</title>
-    <link rel="stylesheet" href="./demo.css">
+    <link rel="stylesheet" href="../css/demo.css">
 </head>
 <body>
     <div class="testWrapper">测试代码</div>
-    <script type="text/javascript" src="./demo.js"></script>
+    <script type="text/javascript" src="../javascript/demo.js"></script>
 </body>
 </html>
